--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
     color-scheme: light dark;
   }
 
+  html {
+    overflow-x: hidden;
+  }
+
   body {
     margin: 0;
     min-width: 320px;
@@ -19,6 +23,7 @@
     color: #213547;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
   }
 
   @media (prefers-color-scheme: dark) {
